# RAG-Telemetry-Evals

./: .gitignore  FRONTEND_PLAN.md  PRD.md  README.md  docker-compose.yml  pyproject.toml  test_chat.py
backend/: app.py  ingest.py  requirements.txt
backend/adapters/: __init__.py
backend/adapters/generators/: __init__.py  openrouter_generator.py
backend/adapters/rerankers/: __init__.py  passthrough_reranker.py
backend/adapters/retrievers/: qdrant_retriever.py
backend/api/: __init__.py  dependencies.py  schemas.py
backend/api/routes/: __init__.py  chat.py  evaluations.py  scores.py  sessions.py
backend/core/: __init__.py  config.py  evaluation_store.py  exceptions.py  infrastructure.py  interfaces.py  models.py  pipeline.py
backend/evaluation/: __init__.py  interfaces.py  mock_evaluator.py  ragas_evaluator.py
backend/services/: chat_service.py  evaluation_service.py
backend/tests/: test_api_with_mock.py  test_chat_service.py  test_evaluation_service.py  test_evaluation_store.py  test_infrastructure_factory.py  test_models.py  test_qdrant_retriever.py  test_rag_pipeline.py  test_ragas_evaluator.py  test_settings.py
data/: rag_info.txt
frontend/: package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ChatPane.tsx  ContextCard.tsx  History.tsx  LeftPane.tsx  MessageBubble.tsx  RightPane.tsx  Settings.tsx
frontend/src/hooks/: useChat.test.ts  useChat.ts  useChatStream.ts  useEvaluations.ts  useScoreSubscription.ts  useSessions.ts
frontend/src/lib/: api.test.ts  api.ts
